readmes and names

--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+Nikita Usenko nusenko@ucsc.edu
+Surya Rani srani@ucsc.edu
+
 We are working together doing pair programming.
 All of the work submitted here is code written by us,
 except for code copied from the instructor’s directories.
